// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render for multiple expenses correctly. 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $123.45
  </h1>
</div>
`;

exports[`should render for single expenses correctly. 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $15.00
  </h1>
</div>
`;
